--- a/templates/gds_dashboard.html
+++ b/templates/gds_dashboard.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SEO Keyword Clusters App</title>
+	<title>Google Data Studio Dashboard - SEO Keyword Clusters App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
@@ -28,7 +28,7 @@
 				Visualisations
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="google-data-studio-dashboard">GDS Dashboard</a>
+				<a class="dropdown-item" href="google-data-studio">GDS Dashboard</a>
 				<a class="dropdown-item" href="tableau-dashboard">Tableau Dashboard</a>
 			  </div>
 		  </li>
