--- a/templates/tableau_dashboard.html
+++ b/templates/tableau_dashboard.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SEO Keyword Clusters App</title>
+	<title>Tableau Dashboard - SEO Keyword Clusters App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
@@ -44,13 +44,8 @@
 
 <!--- Body -->
 	
-		<!-- Google Data Studio -->
-		<div class="google-data-studio">
-
-			<iframe width="100%" height="772" src="https://datastudio.google.com/embed/reporting/709419df-7951-4f77-bff3-216edb48eb27/page/RtWYC" frameborder="0" style="border:0" allowfullscreen></iframe>
-			<!-- <script type="text/javascript" src="../static/js/chartjs.js"></script> -->
-			
-		</div>
+		<!-- Tableau -->
+		<div class='tableauPlaceholder' id='viz1629898854144' style='position: relative'><noscript><a href='#'><img alt='Query Clusters Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ke&#47;keyword_clustering&#47;ClustersDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='keyword_clustering&#47;ClustersDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ke&#47;keyword_clustering&#47;ClustersDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1629898854144');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 	
 	<hr class="my-4">
 
