--- a/templates/about.html
+++ b/templates/about.html
@@ -21,21 +21,25 @@
 	  <span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-	  <ul class="navbar-nav">
-		  <li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="visualisations.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				Visualisations
-			  </a>
-			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="google_data_studio">Bar Plots</a>
-			  </div>
-		  </li>
-		<li class="nav-item">
-			<a class="nav-link" href="about">About</a>
-		  </li>
-	  </ul>
-	</div>
-  </nav>
+		<ul class="navbar-nav">
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="google-data-studio-dashboard" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				  Visualisations
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				  <a class="dropdown-item" href="google-data-studio-dashboard">GDS Dashboard</a>
+				  <a class="dropdown-item" href="tableau-dashboard">Tableau Dashboard</a>
+				</div>
+			</li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="about">About</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="contact">Contact</a>
+			</li>
+		</ul>
+	  </div>
+	</nav>
 
 <!--- Body -->
 <div class="container-fluid padding">
