--- a/templates/about.html
+++ b/templates/about.html
@@ -42,26 +42,39 @@
 	</nav>
 
 <!--- Body -->
+<!--- Welcome Section -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<br>
-			<br>
 			<h1 class="display-4">About</h1>
+			<br>
+			<hr class="my-4">
 		</div>
-		<hr>
 		<div class="col-12">
-			<p class="lead">Passionate about Digital Marketing and more precisely SEO and SEM, it is naturally that I would apply
-				some Data Science knowledges to it.
+			<h2 class="display-10">Digital Marketing and Data Science: a world of opportunities</h2>
+			<br>
+			<br>
+			<p>Coming from a business and digital marketing background, I'm naturally trying to apply my data science skills to it.</p>
+			<p>Whether it is about SEO, SEM or Social Media, data science can help in our daily tasks. Everything is getting more and more automated and we can focus on the essential.</p>
+			<p>It is now going even further with Machine Learning techniques, which can be use for plently of different purposes.
+				We are here focusing on autogenerating clusters of keywords to simplify our SEO analyses. Indeed, websites can have hundreds or thousands of queries and it becomes interesting to classify them into different groups.
 			</p>
-			<p>This app is exploring Machine Learning opportunities to improve and facilitate our work on SEO</p>
+			<br>
+			<p>For example, we can choose keywords from the best performing clusters when building new pages so it will have a better chance to attract visitors. 
+				Furthermore, we can also look at the less performing clusters and try to understand why they perform less and try some changes.</p>
+			<br>
+			<hr class="my-4">
+			<br>
+
+			<p class="lead">Below are the tools used for this project.</p>
+			<p>Files and more technical informations on <a href="https://github.com/jfaccioli/final-project">GitHub</a>.</p>
 		</div>
 	</div>
 </div>
 
 <!--- Three Column Section -->
-<div class="container-fluid padding">
-	<div class="row text-center padding">
+<div class="container-fluid padding" id="logos_about">
+	<div class="row text-center padding" id="grid">
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-code"></i>
 			<h3>HTML</h3>
@@ -82,16 +95,19 @@
 			<i class="fab fa-js"></i>
 			<h3>JAVASCRIPT</h3>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6">
+		<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-drafting-compass"></i>
-			<h3>Flask</h3>
+			<h3>FLASK</h3>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-6">
-			<i class="fas fa-drafting-compass"></i>
-			<h3>Plotly</h3>
+			<i class="fab fa-google"></i>
+			<h3>GOOGLE DATA STUDIO</h3>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-6">
+			<i class="fas fa-table"></i>
+			<h3>TABLEAU</h3>
 		</div>
 	</div>
-<hr class="my-4">
 </div>
 
 
