--- a/templates/index.html
+++ b/templates/index.html
@@ -43,17 +43,32 @@
   </nav>
 
 <!--- Body -->
-	
-		<!-- Google Data Studio -->
-		<div class="google-data-studio">
-
-			<iframe width="100%" height="772" src="https://datastudio.google.com/embed/reporting/709419df-7951-4f77-bff3-216edb48eb27/page/RtWYC" frameborder="0" style="border:0" allowfullscreen></iframe>
-			<!-- <script type="text/javascript" src="../static/js/chartjs.js"></script> -->
-			
+<!--- Welcome Section -->
+<div class="container-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1 class="display-4">SEO Keyword Clusters App</h1>
+			<br>
+			<hr class="my-4">
 		</div>
-	
-	<hr class="my-4">
-
+		<div class="col-12">
+			<h2 class="display-10">Welcome to the SEO Keyword Cluster App!</h2>
+			<br>
+			<p class="lead">This application uses Machine Learning to automatically generate and name clusters of queries.</p>
+			<br>
+			<p class="lead">Feel free to choose your prefered way to visualise the data:</p>
+			<br>
+			<a href="google-data-studio-dashboard">
+			<button type="button" class="btn btn-outline-warning">Google Data Studio</button>
+			</a>
+			<br>
+			<br>
+			<a href="tableau-dashboard">
+			<button type="button" class="btn btn-outline-warning">Tableau</button>
+			</a>
+		</div>
+	</div>
+</div>
 
 <!--- Footer -->
 <footer class="page-footer font-small blue">
