--- a/templates/contact.html
+++ b/templates/contact.html
@@ -65,13 +65,13 @@
 
 
 <!--- Footer -->
-<footer class="page-footer font-small blue">
+<!-- <footer class="page-footer font-small blue"> -->
 
 	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">SEO Keyword Clusters</div>
+	<!-- <div class="footer-copyright text-center py-3">SEO Keyword Clusters</div> -->
 	<!-- Copyright -->
   
-  </footer>
+  <!-- </footer> -->
 
   <!-- Javascript libraries  -->
 
