--- a/templates/index.html
+++ b/templates/index.html
@@ -71,13 +71,13 @@
 </div>
 
 <!--- Footer -->
-<footer class="page-footer font-small blue">
+<!-- <footer class="page-footer font-small blue"> -->
 
 	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">SEO Keyword Clusters</div>
+	<!-- <div class="footer-copyright text-center py-3">SEO Keyword Clusters</div> -->
 	<!-- Copyright -->
   
-  </footer>
+  <!-- </footer> -->
 
   <!-- Javascript libraries  -->
 
