--- a/templates/contact.html
+++ b/templates/contact.html
@@ -64,14 +64,22 @@
 </div>
 
 
+<div class="container-fluid padding" id="logos_about">
+	<div class="row text-center padding" id="grid">
+		<div class="col-xs-12 col-sm-6 col-md-4">
+
+		</div>
+	</div>
+</div>
+
 <!--- Footer -->
-<!-- <footer class="page-footer font-small blue"> -->
+<footer class="page-footer font-small blue">
 
 	<!-- Copyright -->
-	<!-- <div class="footer-copyright text-center py-3">SEO Keyword Clusters</div> -->
+	<div class="footer-copyright text-center py-3">SEO Keyword Clusters</div>
 	<!-- Copyright -->
   
-  <!-- </footer> -->
+  </footer>
 
   <!-- Javascript libraries  -->
 
